Add computer choice to game function

--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 <body>
     <script src="./game_functions.js">
         let computerSelection = getComputerChoice();
-        let playerSelection = prompt("Rock, paper or scissors?");
-        playerSelection.toLowerCase();
-        console.log(round(playerSelection,computerSelection));
+        console.log(game());
 
     </script>
     
