--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rock Paper Scissors</title>
 </head>
 <body>
+    <h2>Lets play!</h2>
     <script src="./game_functions.js">
-        let computerSelection = getComputerChoice();
         console.log(game());
 
     </script>
