Add rock paper scissors buttons

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h2>Lets play!</h2>
+    <button id="rock" class="rps">Rock</button>
+    <button id="paper" class="rps">Paper</button>
+    <button id="scissors" class="rps">Scissors</button>
     <script src="./game_functions.js">
         console.log(game());
 
