Replace console log with DOM methods and display the running score

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 </head>
 <body>
     <h2>Lets play!</h2>
-    <button id="rock" class="rps">Rock</button>
-    <button id="paper" class="rps">Paper</button>
-    <button id="scissors" class="rps">Scissors</button>
+    <button id="rock" class="rps-btn">Rock</button>
+    <button id="paper" class="rps-btn">Paper</button>
+    <button id="scissors" class="rps-btn">Scissors</button>
+    <div class="results"></div>
     <script src="./game_functions.js">
         console.log(game());
 
