Include scoreboard and results through divs

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <button id="rock" class="rps-btn">Rock</button>
     <button id="paper" class="rps-btn">Paper</button>
     <button id="scissors" class="rps-btn">Scissors</button>
-    <div class="results"></div>
+    <div class="results">
+        <div class = "score">
+        </div>
+    </div>
     <script src="./game_functions.js">
-        console.log(game());
-
+        console.log(playGame());
     </script>
     
 </body>
