--- a/index.html
+++ b/index.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-</head>
+    <link rel="stylesheet" href="style.css">
+</head> 
 <body>
+
     <h2>Lets play!</h2>
     <button id="rock" class="rps-btn">Rock</button>
     <button id="paper" class="rps-btn">Paper</button>
     <button id="scissors" class="rps-btn">Scissors</button>
     <div class="results">
-        <div class = "score">
-        </div>
-    </div>
-    <script src="./game_functions.js">
-        console.log(playGame());
-    </script>
-    
+        <div class="round-outcome"></div>
+        <h2 class = "score"></div>
+        <h1 class = 'winner'></h2>
+
+    </div>  
 </body>
+<script src="./game_functions.js"></script>
+
 </html>
