Add inner text to outcome div

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Rock Paper Scissors</title>
     <link rel="stylesheet" href="style.css">
 </head> 
+
 <body>
 
     <h2>Lets play!</h2>
@@ -14,11 +15,11 @@
     <button id="scissors" class="rps-btn">Scissors</button>
     <div class="results">
         <div class="round-outcome"></div>
-        <h2 class = "score"></div>
-        <h1 class = 'winner'></h2>
+        <h2 class = "score"></h2>
+        <h1 class = 'winner'></h1>
 
     </div>  
+    <script src="./game_functions.js"></script>
 </body>
-<script src="./game_functions.js"></script>
 
 </html>
