Show running score

--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
     <button id="paper" class="rps-btn">Paper</button>
     <button id="scissors" class="rps-btn">Scissors</button>
     <div class="results">
+        <span class = "playerscore"></span>
+        <span class = "compscore"> </span>
+
         <div class="round-outcome"></div>
-        <h2 class = "score"></h2>
+
         <h1 class = 'winner'></h1>
 
     </div>  
